--- a/src/partials/9-footer.html
+++ b/src/partials/9-footer.html
@@ -1,5 +1,5 @@
-<footer id="footer" class="footer-container section-animation">
-  <div class="footer-page">
+<footer id="footer" class="footer section-animation">
+  <div class="container">
     <div class="footer-position-cont">
       <div>
         <a class="footer-page-logo" href="./index.html">watchcharm</a>
@@ -12,7 +12,7 @@
               referrerpolicy="no-referrer"
               aria-label="Open facebook"
             >
-              <svg class="footer-icon-social" width="18" height="20">
+              <svg class="footer-icon-social" width="18" height="18">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
@@ -25,7 +25,7 @@
               referrerpolicy="no-referrer"
               aria-label="Open instagram"
             >
-              <svg class="footer-icon-social" width="18" height="20">
+              <svg class="footer-icon-social" width="18" height="18">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
@@ -38,7 +38,7 @@
               referrerpolicy="no-referrer"
               aria-label="Open youtube"
             >
-              <svg class="footer-icon-social" width="18" height="20">
+              <svg class="footer-icon-social" width="18" height="18">
                 <use href="./images/icons.svg#icon-youtube"></use>
               </svg>
             </a>
@@ -84,8 +84,8 @@
         1678 S. Pioneer Road Salt Lake City UT 84104
       </p>
     </div>
+    <span class="underline"></span>
     <div class="footer-bottom">
-      <span class="underline"></span>
       <p class="footer-bt-date">©2023 The Watch Spot. All rights reserved.</p>
       <span class="footer-service">
         <a
