add-small-fixes

--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -1,6 +1,6 @@
 <header class="header" id="header">
   <div class="container header-container">
-    <a class="header-logo" href="#">watchcharm</a>
+    <a class="header-logo" href="#hero">watchcharm</a>
     <div class="header-menu">
       <nav class="header-nav">
         <ul class="header-nav-list">
