--- a/src/partials/9-footer.html
+++ b/src/partials/9-footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer-position-cont">
       <div>
-        <a class="footer-page-logo" href="./index.html">watchcharm</a>
+        <a class="footer-page-logo" href="#hero">watchcharm</a>
         <ul class="footer-icon-list">
           <li class="footer-item-icon">
             <a
@@ -60,7 +60,7 @@
     <div class="footer-navig">
       <ul class="footer-navig-list">
         <li class="footer-navig-item">
-          <a href="#home" aria-label="Go to Home page">Home</a>
+          <a href="#hero" aria-label="Go to Home page">Home</a>
         </li>
         <li class="footer-navig-item">
           <a href="#about-us" aria-label="Learn more About Us">About Us</a>
