--- a/src/partials/2-hero.html
+++ b/src/partials/2-hero.html
@@ -82,6 +82,7 @@
         width="335"
         height="366"
         class="hero-watches-img"
+        fetchpriority="high"
       />
     </picture>
   </div>
