--- a/src/partials/6-sale.html
+++ b/src/partials/6-sale.html
@@ -1,7 +1,7 @@
 <section class="sale section-animation" id="sale">
   <div class="container">
     <h2 class="sale-title">Sale</h2>
-    <div class="salewrapper" sale>
+    <div class="salewrapper">
       <div class="picture-wrapper">
         <ul class="items-example">
           <li class="sale-item-picture">
