--- a/src/css/8-contact-us.css
+++ b/src/css/8-contact-us.css
@@ -100,6 +100,7 @@
 
 .contact-input-field:focus {
   border-color: var(--accent);
+  outline: none;
 }
 .contact-input-field:hover {
   border-color: var(--accent);
@@ -127,11 +128,11 @@ textarea::placeholder {
   line-height: 1.28571;
 }
 @media only screen and (min-width: 768px) {
-    textarea::placeholder {
-      font-size: 16px;
-      line-height: 1.25;
-    }
+  textarea::placeholder {
+    font-size: 16px;
+    line-height: 1.25;
   }
+}
 .contact-comment-input {
   background-color: transparent;
   border: 1px solid rgba(12, 12, 12, 0.15);
@@ -145,6 +146,13 @@ textarea::placeholder {
   resize: none;
   transition: border-color 275ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.contact-comment-input:hover,
+.contact-comment-input:focus {
+  outline: none;
+  border-color: var(--accent);
+}
+
 @media only screen and (min-width: 768px) {
   .contact-comment-input {
     padding: 16px 18px 16px 18px;
@@ -210,7 +218,7 @@ textarea::placeholder {
   .contact-us-watches-img {
     width: 530px;
     margin-top: 84px;
-    margin-left:40px;
+    margin-left: 40px;
     margin-right: 65px;
   }
 }
