--- a/src/css/3-about-us.css
+++ b/src/css/3-about-us.css
@@ -11,8 +11,8 @@
 
 .about-title {
   font-weight: 600;
-  font-size: 48px;
-  line-height: 0.91667;
+  font-size: 32px;
+  line-height: 1;
   letter-spacing: -0.02em;
   color: var(--main);
 
@@ -21,12 +21,16 @@
 
 .about-text {
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.25;
+  font-size: 14px;
+  line-height: 1.28;
   letter-spacing: -0.02em;
   color: rgba(12, 12, 12, 0.7);
 
   margin-bottom: 20px;
+}
+
+.last-text {
+  margin-bottom: 40px;
 }
 
 .about-btn {
@@ -52,7 +56,7 @@
 
 .about-btn:hover,
 .about-btn:focus {
-  background-color: var(--accent);
+  background-color: #1f3cd4;
 }
 
 .about-img-div {
@@ -77,7 +81,18 @@
   }
 
   .about-title {
+    font-size: 48px;
+    line-height: 0.91;
+
     margin-bottom: 40px;
+  }
+
+  .about-text {
+    font-size: 16px;
+    line-height: 1.25;
+  }
+  .last-text {
+    margin-bottom: 60px;
   }
 
   .about-btn {
@@ -104,6 +119,14 @@
   .about-welcome {
     margin-bottom: 0;
     width: 580px;
+  }
+
+  .about-title {
+    font-size: 48px;
+  }
+
+  .last-text {
+    margin-bottom: 40px;
   }
 
   .about-btn {
