--- a/src/partials/3-about-us.html
+++ b/src/partials/3-about-us.html
@@ -8,7 +8,7 @@
         very best in Swiss craftsmanship and engineering, ensuring that you'll
         always have a reliable and stylish accessory on your wrist.
       </p>
-      <p class="about-text">
+      <p class="about-text last-text">
         At our premium watch collection, we believe that a watch is more than
         just a timekeeping device &mdash; it's a statement piece that reflects
         your personality and style. So why settle for anything less than the
