--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,7 +20,7 @@
 /* https://github.com/koleso8 */
 
 @import url('./6-sale.css');
-/* Микола */
+/* https://github.com/NicolaiDodeac */
 
 @import url('./7-reviews.css');
 /* https://github.com/anna-vasylenko */
